--- a/day02/register.html
+++ b/day02/register.html
@@ -10,7 +10,7 @@
 <body>
     <div class="account-box" id="register">
         <h2>Register</h2>
-        <form>
+        <form action="">
             <div class="user-box">
                 <input id="email" type="text" name="" required="" placeholder="Email">
             </div>
@@ -23,6 +23,6 @@
               </div>
         </form>
     </div>
-    <script src="account.js"></script>
+    <script src="register.js"></script>
 </body>
 </html>
