--- a/day02/login.html
+++ b/day02/login.html
@@ -19,7 +19,7 @@
       </div>
       <div class="selector">
         <a class="account" href="../register/register.html">Bạn chưa có tài khoản?</a>
-        <button type="submit" class="btn">Submit</button>
+        <button id="btnLogin" type="submit" class="btn">Submit</button>
       </div>
     </form>
   </div>
